# docs/swagger.json
@@ -40,7 +40,7 @@
             }
         },
         "/search/address": {
-            "post": {
+            "get": {
                 "description": "Search based on the address model and return associated working area, activities, and services",
                 "consumes": [
                     "application/json"
@@ -54,13 +54,11 @@
                 "summary": "Perform a search based on the address model",
                 "parameters": [
                     {
-                        "description": "Search request",
-                        "name": "body",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/controllers.AddressSearchRequest"
-                        }
+                        "type": "string",
+                        "description": "Search query",
+                        "name": "query",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -131,6 +129,59 @@
                     }
                 ],
                 "responses": {}
+            }
+        },
+        "/search/all/address/{province}/{district}/{municipality}/{ward_number}": {
+            "get": {
+                "description": "Search based on the address model and return associated working area, activities, and services",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Search"
+                ],
+                "summary": "Perform a search based on the address model",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Province",
+                        "name": "province",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "District",
+                        "name": "district",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Municipality",
+                        "name": "municipality",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Ward Number",
+                        "name": "ward_number",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Search result",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.SearchResult"
+                        }
+                    }
+                }
             }
         },
         "/user/all": {
@@ -345,17 +396,6 @@
         }
     },
     "definitions": {
-        "controllers.AddressSearchRequest": {
-            "type": "object",
-            "required": [
-                "address"
-            ],
-            "properties": {
-                "address": {
-                    "type": "string"
-                }
-            }
-        },
         "controllers.CreateKYCAddressRequest": {
             "type": "object",
             "required": [
